# lokacore

./: .travis.yml  Cargo.toml  README.md  appveyor.yml  release.txt
.cargo/: config
scripts/: travis.sh
scripts/generic-cross/.cargo/: config
scripts/linux-android/.cargo/: config
scripts/windows-android/.cargo/: config
src/: arch.rs  lib.rs  marker.rs
src/arch/: sse.rs  sse.rs.bak  sse2.rs  sse3.rs  x86.rs  x86_64.rs
src/arch/x86_64/: sse.rs
tests/: branchless.rs  cast_slice_tests.rs  intel-simd-help.rs  sse.rs  sse2.rs  sse2.rs.bak  sse3.rs
