[package]
name = "imagine"
description = "A crate for image data parsing"
version = "0.0.2-alpha.0"
authors = ["Lokathor <zefria@gmail.com>"]
repository = "https://github.com/Lokathor/imagine"
readme = "README.md"
keywords = ["lokathor"]
edition = "2018"
license = "0BSD"

[badges]
appveyor = { repository = "Lokathor/imagine" }
travis-ci = { repository = "Lokathor/imagine" }
