[package]
name = "lokacore"
description = "Lokathor's core-only odds and ends"
version = "0.0.2-alpha.0"
authors = ["Lokathor <zefria@gmail.com>"]
repository = "https://github.com/Lokathor/lokacore"
readme = "README.md"
keywords = ["lokathor"]
edition = "2018"
license = "0BSD"

[badges]
appveyor = { repository = "Lokathor/lokacore" }
travis-ci = { repository = "Lokathor/lokacore" }
